# mlops-example

./: .pre-commit-config.yaml  pyproject.toml
.dvc/: config
mlflow/: Files.dvc  lightning_model.py  losses.py  preprocessing.py
mlflow-medical-segmentation/: datasets.py  lightning_model.py  main.py  preprocessing.py
