[tool.poetry]
name = "mlflow-medical-segmentation"
version = "0.1.0"
description = ""
authors = ["JohnConnor123 <ivan.eudokimoff2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
torch = {version = "^2.4.0+cu121", source = "torch-repo"}
torchvision = {version = "^0.19.0+cu121", source = "torch-repo"}
torchaudio = {version = "^2.4.0+cu121", source = "torch-repo"}
numpy = "<2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
scikit-image = "^0.24.0"
albumentations = "^1.4.14"
lightning = "^2.4.0"
torchmetrics = "^1.4.1"
tensorboard = "^2.17.1"
mlflow = "^2.15.1"
pynvml = "^11.5.3"
psutil = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
pre-commit = "^3.8.0"


[[tool.poetry.source]]
name = "torch-repo"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = ["mlflow-medical-segmentation/main.py"]
